--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "ilint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "format": "prettier --write --cache .",
-    "lint": "eslint src/**/*.{ts,tsx} --cache ."
+    "lint": "eslint src/**/*.{ts,tsx} --cache .",
+    "prepare": "husky install"
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
@@ -33,6 +34,8 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.2.2",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2",
