--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.2",
+    "recoil": "^0.7.7",
     "v6": "^0.0.0"
   },
   "devDependencies": {
