--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.29.12",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "react": "^18.2.0",
