--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
     "paths": {
       "@assets/*": ["src/assets/*"],
       "@components/*": ["src/components/*"],
+      "@pages/*": ["src/pages/*"],
       "@/*": ["src/*"]
     }
   },
