--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-kakao-maps-sdk": "^1.1.9",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.2",
     "recoil": "^0.7.7",
-    "v6": "^0.0.0"
+    "v6": "^0.0.0",
+    "vite-plugin-html": "^3.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.8",
