--- a/package.json
+++ b/package.json
@@ -20,15 +20,20 @@
     "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-kakao-maps-sdk": "^1.1.9",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.2",
+    "react-slick": "^0.29.0",
     "recoil": "^0.7.7",
-    "v6": "^0.0.0"
+    "slick-carousel": "^1.8.1",
+    "v6": "^0.0.0",
+    "vite-plugin-html": "^3.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "@vitejs/plugin-react": "^4.0.0",
