--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.29.12",
+    "@types/xml-parser": "^1.2.30",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.25.3",
     "react": "^18.2.0",
     "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
@@ -24,10 +27,12 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.2",
     "react-slick": "^0.29.0",
+    "react-xml-parser": "^1.1.8",
     "recoil": "^0.7.7",
     "slick-carousel": "^1.8.1",
     "v6": "^0.0.0",
-    "vite-plugin-html": "^3.2.0"
+    "vite-plugin-html": "^3.2.0",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.8",
@@ -37,12 +42,10 @@
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "@vitejs/plugin-react": "^4.0.0",
-    "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "husky": "^8.0.0",
