--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "proxy":"http://ec2-3-34-80-242.ap-northeast-2.compute.amazonaws.com:8080",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -35,6 +36,7 @@
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
+    "@types/node": "^20.4.1",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
     "@types/react-router-dom": "^5.3.3",
