--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-slick": "^0.29.0",
     "react-xml-parser": "^1.1.8",
     "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "slick-carousel": "^1.8.1",
     "v6": "^0.0.0",
     "vite-plugin-html": "^3.2.0",
