--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,5 +23,8 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          VITE_KAKAO_JAVASCRIPT_KEY: ${{ secrets.VITE_KAKAO_JAVASCRIPT_KEY }}
+        VITE_KAKAO_REST_API_KEY: ${{ secrets.VITE_KAKAO_REST_API_KEY }}
+        VITE_TRAVEL_API_KEY: ${{ secrets.VITE_TRAVEL_API_KEY }}
         run: |
           aws s3 cp --recursive --region ap-northeast-2 dist s3://wanderhub
